# redicrypt-py

./: .gitignore  README.md  pyproject.toml
redicrypt/: client.py
