[tool.poetry]
name = "redicrypt-py"
version = "0.3.0"
description = "A python library for redicrypt"
authors = ["Chayim Kirshen <c@kirshen.com>"]
license = "MIT"
packages = [
    {include = "redicrypt"}
]

[tool.poetry.dependencies]
python = "^3.9"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
