[tool.poetry]
name = "redicrypt-py"
version = "0.3.1"
description = "A python library for redicrypt"
authors = ["Chayim Kirshen <c@kirshen.com>"]
license = "MIT"
packages = [
    {include = "redicrypt"}
]

classifiers = [
    'Topic :: Security',
    'Programming Language :: Python',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'License :: OSI Approved :: BSD License',
    'Development Status :: 4 - Beta',
]

[tool.poetry.dependencies]
python = "^3.6"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.3"]
build-backend = "poetry.core.masonry.api"
